# dietapp

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
dietapp/: asgi.py  settings.py  urls.py  wsgi.py
dietapp/settings_extensions/: __init__.py  edamam.py
edamam/: api_client.py  apps.py  extractor.py  mappers.py  models.py  serializers.py  urls.py  views.py
edamam/management/commands/: addfood.py  food.py  nutrients.py
edamam/migrations/: 0001_initial.py  0002_food_foodmeasure_foodnutrient_measure_nutrient_qualifier_unit.py  0003_auto_20210109_1948.py
edamam/templates/edamam/: food_list.html
edamam/utils/: upc_generator.py
testapp/: models.py
testapp/migrations/: 0001_initial.py
